bk_ida/gccida/c1/noce_get_condition
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_condition/src/ifcvt.c:1981:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v8; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_condition/src/ifcvt.c:1990:4: error: expected ';' after expression
rtx v17; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_condition/src/ifcvt.c:1990:5: error: use of undeclared identifier 'v17'
rtx v17; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_condition/src/ifcvt.c:1991:4: error: expected ';' after expression
rtx i; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_condition/src/ifcvt.c:1991:5: error: use of undeclared identifier 'i'
rtx i; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_condition/src/ifcvt.c:1996:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v2 = ( __int64)pc_set( jump)[1]; 
               ^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_condition/src/ifcvt.c:1998:51: error: invalid operands to binary expression ('uint64' (aka 'unsigned long long') and 'struct rtx_def')
v4 = *( _WORD *)v3 == 67 && *( _QWORD *)( v3 + 8) == jump[4]; 
                            ~~~~~~~~~~~~~~~~~~~~~ ^  ~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_condition/src/ifcvt.c:2002:35: error: must use 'enum' tag to refer to type 'mode_class'
if ( ( _WORD)v7 == 61 && *( const mode_class *)( ( char *)mode_class_0 + ( ( v7 >> 14) & 0x3FC)) == MODE_INT ) 
                                  ^
                                  enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_condition/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_condition/src/ifcvt.c:2002:59: error: use of undeclared identifier 'mode_class_0'
if ( ( _WORD)v7 == 61 && *( const mode_class *)( ( char *)mode_class_0 + ( ( v7 >> 14) & 0x3FC)) == MODE_INT ) 
                                                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_condition/src/ifcvt.c:2006:14: error: expected ';' after return statement
return ( rtx)v5; 
             ^
             ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_condition/src/ifcvt.c:2007:27: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v8 = reverse_condition( ( rtx_code)*v5); 
                          ^~~~~~~~
                          rtx_cost
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_condition/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_condition/src/ifcvt.c:2007:36: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'unsigned short *')
v8 = reverse_condition( ( rtx_code)*v5); 
                        ~~~~~~~~~~~^~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_condition/src/ifcvt.c:2008:30: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( v8, ( machine_mode)*( ( unsigned __int8 *)v5 + 2), v6, *( ( rtx *)v5 + 2)); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_condition/src/ifcvt.c:2008:89: error: expected expression
return gen_rtx_fmt_ee( v8, ( machine_mode)*( ( unsigned __int8 *)v5 + 2), v6, *( ( rtx *)v5 + 2)); 
                                                                                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_condition/src/ifcvt.c:2012:43: error: expected ')'
v11 = canonicalize_condition( jump, ( rtx)v5, v4, earliest, 0LL); 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_condition/src/ifcvt.c:2012:29: note: to match this '('
v11 = canonicalize_condition( jump, ( rtx)v5, v4, earliest, 0LL); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_condition/src/ifcvt.c:2034:15: error: must use 'enum' tag to refer to type 'mode_class'
if ( *( const mode_class *)( ( char *)mode_class_0 + ( ( v16 >> 14) & 0x3FC)) != MODE_INT ) 
              ^
              enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_condition/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_condition/src/ifcvt.c:2034:39: error: use of undeclared identifier 'mode_class_0'
if ( *( const mode_class *)( ( char *)mode_class_0 + ( ( v16 >> 14) & 0x3FC)) != MODE_INT ) 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_condition/src/ifcvt.c:2036:43: error: expected ')'
v17 = canonicalize_condition( jump, ( rtx)v5, reverse, earliest, v15); 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_condition/src/ifcvt.c:2036:29: note: to match this '('
v17 = canonicalize_condition( jump, ( rtx)v5, reverse, earliest, v15); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_condition/src/ifcvt.c:2036:1: error: use of undeclared identifier 'v17'
v17 = canonicalize_condition( jump, ( rtx)v5, reverse, earliest, v15); 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_condition/src/obj/ifcvt.o] Error 1
